@@ -26,6 +26,11 @@ Changes from grid_1.8.0 to grid_1.9.0:
     advised for interactive use (in case I decide to change the
     separator :: in later versions).
 
+6.  Added "just" argument to grid.layout() to allow justification
+    of layout relative to parent viewport *IF* the layout is not
+    the same size as the viewport.  There's an example in
+    help(grid.layout).
+
 
 Changes from grid_1.8.0 to grid_1.8.1:
 ------------------------------------
